[gd_scene load_steps=4 format=3 uid="uid://bxojio4tmgeo3"]

[ext_resource type="Texture2D" uid="uid://cdufi0ckyfeq2" path="res://ui_scenes/shop/terminalBG.png" id="1_ot2tc"]
[ext_resource type="Script" uid="uid://bjgh31urpgxqi" path="res://ui_scenes/creativeMenu/creative_icon.gd" id="2_s846j"]
[ext_resource type="Texture2D" uid="uid://crycp556ootu2" path="res://items/tools/pomniPickaxe.png" id="3_skib1"]

[node name="CreativeIcon" type="NinePatchRect"]
custom_minimum_size = Vector2(25, 25)
offset_right = 24.0
offset_bottom = 24.0
texture = ExtResource("1_ot2tc")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_vertical = 1
script = ExtResource("2_s846j")

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(13, 13)
texture = ExtResource("3_skib1")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(12, 12)
texture = ExtResource("3_skib1")

[node name="getItem" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 23.0
offset_bottom = 23.0

[connection signal="mouse_entered" from="getItem" to="." method="_on_get_item_mouse_entered"]
[connection signal="mouse_exited" from="getItem" to="." method="_on_get_item_mouse_exited"]
[connection signal="pressed" from="getItem" to="." method="_on_get_item_pressed"]
